test/shouldnt-compile/wrong-variadic.cpp
#include "common.hpp"


void check() {
  Enums e(Enum::One, 1);
}
